# cpp-ogl-cv

./: README.md
Methods/: Account.cpp  Account.h  Makefile  main.cpp
Static/: static-variab.cpp
Types/: test.cpp
cpp-basic/: CMakeLists.txt
cpp-basic/cherno-yt/: CMakeLists.txt
cpp-basic/cherno-yt/casting/: README.md
cpp-basic/cherno-yt/lambdas/: lambdas_demo.cpp
cpp-basic/cherno-yt/operators/: overloading_1.cpp
cpp-basic/cherno-yt/smart-pointers/: shared-unique-weak.cpp
cpp-basic/cherno-yt/static-arrays/: loop-anysize-array.cpp
cpp-basic/src/cherno-yt/: CMakeLists.txt
cpp-basic/src/cherno-yt/casting/: README.md  casting-example.cpp  dynamic-another.cpp  dynamic-casting.cpp
cpp-basic/src/cherno-yt/custom-alloc/: custom-alloc.hpp  new-delete.cpp
cpp-basic/src/cherno-yt/custom-arrays/: arrays.cpp
cpp-basic/src/cherno-yt/custom-strings/: basic.cpp  mystring.hpp
cpp-basic/src/cherno-yt/dynamic-arrays/: basic.cpp  dynaimc-array.hpp
cpp-basic/src/cherno-yt/iterators/: basic.cpp  custom-iterators.cpp
cpp-basic/src/cherno-yt/lambdas/: lambdas_demo.cpp
cpp-basic/src/cherno-yt/multithreading/: file-copy.cpp
cpp-basic/src/cherno-yt/operators/: overloading_2.cpp
cpp-basic/src/cherno-yt/scoped-ptr/: scoped_ptr.cpp
cpp-basic/src/cherno-yt/string_view/: string_view.cpp
dsa/: CMakeLists.txt  README.md
open3d/: README.md
open3d/basic-transformation/: CMakeLists.txt  main.cpp
open3d/read-ply/: CMakeLists.txt  main.cpp
opengl/: CMakeLists.txt  README.md
opengl/cherno-opengl/: CMakeLists.txt  README.md
opengl/cherno-opengl/01-windowing/: windowing.cpp
opengl/cherno-opengl/02-glew-test/: glew-test.cpp
opengl/cherno-opengl/03-modern-opengl-basic/: glew-test.cpp  hello_world.cpp  vertex_buffer_and_shaders.cpp
opengl/cherno-opengl/08-dealing-with-shaders/: shaders_example.cpp
opengl/cherno-opengl/08-dealing-with-shaders/res/: basic.shader
opengl/cherno-opengl/09-index-buffers/: index_buffers.cpp
opengl/cherno-opengl/10-opengl-errors/: main.cpp
opengl/cherno-opengl/10-opengl-errors/res/: basic.shader
opengl/cherno-opengl/11-uniforms/: main.cpp
opengl/cherno-opengl/12-vertex-arrays/: main.cpp
opengl/cherno-opengl/13-14-15-abstraction/: CMakeLists.txt  README.md  main.cpp
opengl/cherno-opengl/13-14-15-abstraction/res/: basic.shader
opengl/cherno-opengl/13-14-15-abstraction/src/: index_buffer.cpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp  vertex_buffer_layout.cpp  vertex_buffer_layout.hpp
opengl/cherno-opengl/13-to-19-abstraction/: main.cpp
opengl/cherno-opengl/13-to-19-abstraction/src/: renderer.cpp
opengl/cherno-opengl/19-20-21-opengl-maths/: CMakeLists.txt  main.cpp
opengl/cherno-opengl/23-rendering-multiple/: CMakeLists.txt  README.md  main.cpp
opengl/getting-started/: CMakeLists.txt  README.md  main.cpp
opengl/hello_world/: README.md  main.cpp
opengl/learnopengl-tutorials/: CMakeLists.txt
opengl/learnopengl-tutorials/01-getting-started/: main.cpp  opengl.code-workspace
opengl/learnopengl-tutorials/02-viewport-and-callbacks/: CMakeLists.txt  main.cpp
opengl/learnopengl-tutorials/04-element-buffers/: CMakeLists.txt
opengl/learnopengl-tutorials/05-01-shader-using-uniform/: CMakeLists.txt  main.cpp
opengl/learnopengl-tutorials/05-02-shader-custom-class/: CMakeLists.txt  README.md  main.cpp  shader.fs  shader.hpp
opengl/learnopengl-tutorials/05-shaders/: CMakeLists.txt
opengl/learnopengl-tutorials/05-shaders-detail/: CMakeLists.txt  main.cpp
opengl/learnopengl-tutorials/06-01-texture-basic/: texture.fs  texture.vs
opengl/learnopengl-tutorials/06-02-texture-and-uniform/: CMakeLists.txt  README.md  main.cpp
opengl/learnopengl-tutorials/06-03-texture-units/: CMakeLists.txt  main.cpp
opengl/learnopengl-tutorials/07-transformations/: CMakeLists.txt  main.cpp
opengl/learnopengl-tutorials/08-01-3d-opegl-basics/: CMakeLists.txt  shader.hpp  texture.vs
opengl/learnopengl-tutorials/08-coordinate-sys-and-3d/: README.md
opengl/learnopengl-tutorials/09-00-camera-basics/: CMakeLists.txt  README.md
opengl/learnopengl-tutorials/09-01-walk-around/: main.cpp
opengl/learnopengl-tutorials/10-colors-basics/: CMakeLists.txt  README.md  main.cpp
opengl/lib/include/ZR/: core.hpp
opengl/lib/src/ZR/: core.cpp
opengl/tutorials/01-getting-started/: CMakeLists.txt
opengl/tutorials/03-primitive-and-shaders/: CMakeLists.txt  README.md  main.cpp
opengl/tutorials/04-element-buffers/: README.md  main.cpp
opengl/tutorials/05-01-shader-using-uniform/: main.cpp
opengl/tutorials/05-02-shader-custom-class/: main.cpp  shader.hpp  shader.vs
opengl/tutorials/05-shaders/: README.md  main.cpp
opengl/tutorials/05-shaders-detail/: README.md  main.cpp
opengl/tutorials/06-01-texture-basic/: README.md  main.cpp  shader.hpp  texture.fs
opengl/tutorials/06-02-texture-and-uniform/: README.md  main.cpp  texture.fs
opengl/tutorials/06-03-texture-units/: README.md  texture.fs  texture.vs
opengl/tutorials/06-texture-basic/: CMakeLists.txt
opengl/tutorials/07-transformations/: README.md  shader.hpp  texture.vs
opengl/tutorials/08-01-3d-opegl-basics/: main.cpp
opengl/tutorials/08-02-z-buffer-and-more/: CMakeLists.txt  main.cpp
opengl/tutorials/08-coordinate-sys-and-3d/: CMakeLists.txt  README.md  main.cpp
opengl/tutorials/09-00-camera-basics/: README.md  main.cpp  texture.fs
opengl/tutorials/09-01-walk-around/: CMakeLists.txt  README.md
opengl/tutorials/getting-started/: main.cpp
opengl/tutorials/viewport-and-callbacks/: CMakeLists.txt
opengl/viewport-and-callbacks/: README.md  main.cpp
ppt-demo/: compilation_example.cpp  copying_copy-constructors.cpp  custom_smart_pointer.cpp  dynamic_binding.cpp  lvalue_rvalue.cpp  move_assignment.cpp  moving.cpp  new_delete_allocation.cpp  new_delete_overloaded.cpp  operator_overloading_basic.cpp  operator_overloading_custom.cpp  overdoing_copy-constructor.cpp  pointers.cpp  smart_pointers.cpp  stack_heap.cpp  static_binding.cpp
python-basic/: alien.py  bstree.py  (+9 more)
(+32 files in other folders)
