project (opengl-learnopengl)
cmake_minimum_required(VERSION 2.8.12)


# Note: Some paths are relative to the build folder. So to make the following code work, we need to fix the path relaltive to the build
# folder thus created. Until then, we will build each subfolder listed below by navigating into opengl/learnopengl-tutorials/<folder>

# add_subdirectory(01-getting-started)
# add_subdirectory(02-viewport-and-callbacks)
# add_subdirectory(03-primitive-and-shaders)
# add_subdirectory(04-element-buffers)
# add_subdirectory(05-shaders)
# add_subdirectory(05-shaders-detail)
# add_subdirectory(05-01-shader-using-uniform)
# add_subdirectory(05-02-shader-custom-class)
# add_subdirectory(06-01-texture-basic)
# add_subdirectory(06-02-texture-and-uniform)
# add_subdirectory(06-03-texture-units)
# add_subdirectory(07-transformations)
# add_subdirectory(08-coordinate-sys-and-3d)
# add_subdirectory(08-01-3d-opegl-basics)
# add_subdirectory(08-02-z-buffer-and-more)
# add_subdirectory(09-00-camera-basics)
# add_subdirectory(09-01-walk-around)
# add_subdirectory(10-colors-basics)

